[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["kingahmadr <ahmadnromiz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"
pydantic = {extras = ["dotenv"], version = "^2.9.2"}
fastapi-sqlalchemy = "^0.2.1"
pymysql = "^1.1.1"
pydantic-settings = "^2.6.0"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
databases = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
